--- a/leetCode/pom.xml
+++ b/leetCode/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>spring-oom-web-demo</artifactId>
+    <artifactId>CityLeetCode</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <parent>
