--- a/.gitignore
+++ b/.gitignore
@@ -70,13 +70,14 @@ logs/*
 .history/
 .lib/
 dist/*
-target/
-out/
+target/*
+out/*
 lib_managed/
 src_managed/
 project/boot/
 project/plugins/project/
 .sbtserver/
+classes/*
 
 # Scala-IDE specific
 .scala_dependencies
